Refactor logging to separate stdout/stdout/system lines
The new logging differentiates between stdout, stderr, and system log
lines much better. The flushing logic has also been simplified, so lines
should appear on the terminal when expected (though possibly with lower
performance, will need to keep an eye on this).

--- a/pmux-example.yml
+++ b/pmux-example.yml
@@ -5,7 +5,7 @@
 # string works.
 #
 # If timeFormat isn't set then the time is not included in each log line.
-timeFormat: "2006-01-02T15:04:05.000Z07:00"
+#timeFormat: "2006-01-02T15:04:05.000Z07:00"
 
 # processes is the only required field, it must have at least one process
 # defined.
@@ -42,7 +42,7 @@ processes:
     args:
       - "-c"
       - |
-        trap "echo 'i will never stop, you will have to SIGKILL me!'" SIGINT
+        trap "echo 'i will never stop, you will have to SIGKILL me!' >&2" SIGINT
         while ping -c1 example.com; do sleep 1; done
 
     sigKillWait: 1s
